# metainstaller

./: .env.baseimage  .env.version  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  create_baseimage.sh  docker-compose-create-baseimage.yml  docker-compose.yml  document_rest_apis.sh  example_docs_output.html  make_project.sh  push_version_tag.sh  test_file_browsing.sh  test_filemanager.sh  test_project_manager.sh
cmake/: EmbedResources.cmake
docs/: FILE_BROWSER.md  PROJECT_MANAGER_ARCHITECTURE.md  README_ProjectManager.md
example_project/: README.md  docker-compose.yml
example_project/html/: index.html
frontend/: .env  .env.example  .env.production  Dockerfile  README.md  file_picker.html  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: BottomPane.tsx  Dashboard.tsx  Layout.tsx  Navigation.tsx
frontend/src/components/containers/: ContainerManagement.tsx
frontend/src/components/docker/: Installation.tsx  ServiceManagement.tsx
frontend/src/components/images/: ImageManagement.tsx
frontend/src/components/logs/: LogViewer.tsx
frontend/src/components/projects/: ArchiveAnalyzer.tsx  ArchiveCreator.tsx  ProjectDetails.tsx  ProjectLoader.tsx  ProjectManagement.tsx  index.ts
frontend/src/components/system/: SystemInfo.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  ExitButton.tsx  ExitConfirmationDialog.tsx  FilePicker.test.tsx  FilePicker.tsx  Input.tsx  MetaFilePicker.tsx  MetaFilePickerDemo.tsx  Table.tsx  index.ts
frontend/src/hooks/: useApi.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: api.ts
frontend/src/utils/: env.ts
resources/: 404_fantasy.html  comprehensive_docs.html  profile_midori.7z
src/: BrowserManager.cpp  BrowserManager.hpp  DockerManager.cpp  DockerManager.h  EnvCollection.hpp  EnvConfig.cpp  EnvConfig.hpp  FileManager.cpp  FileManager.h  MarkdownToHtml.cpp  MarkdownToHtml.h  MetaDatabase.cpp  MetaDatabase.h  MimeTypes.hpp  ProcessManager.cpp  ProcessManager.h  ProjectManager.cpp  ProjectManager.h  SELinuxManager.cpp  SELinuxManager.h  dotenv.cpp  dotenv.hpp  help_global.cpp  help_global.h  json11.cpp  main.cpp  resourceextractor.cpp  resourceextractor.h  test.cpp  test.h  types.hpp  utils.cpp  utils.h  x_detector.cpp  x_detector.hpp
